<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding ="16dp"
       >


        <TextView
            android:text="@string/lbl_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:gravity="center_horizontal"
            android:layout_marginTop="89dp"
            android:id="@+id/tvlblHeader" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/forgot_password_msg"
            android:textSize="14sp"/>

    </LinearLayout>


    <Button
        android:text="@string/reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_forgotpassword_resetpassword_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="62dp"
        android:layout_below="@+id/activity_forgotpassword_email_editText"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/my_button"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/input_outline"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="@color/colorBlack"
        android:textColor="@color/colorBlack"
        android:id="@+id/activity_forgotpassword_email_editText"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:textColor="@color/colorBlack"
        android:id="@+id/activity_forgotpassword_back_textview_clickable"
        android:clickable="true"/>
</RelativeLayout>