<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_coordingator_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".activities.MainActivity"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:padding="16dp"
        android:id="@+id/activity_login_linear_layout"
        >


        <TextView
            android:text="@string/tvSendRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:id="@+id/activity_login_send_registration_activity"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:id="@+id/activity_login_test_forgot_password"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:id="@+id/activity_login_signin_button"
            android:background="@drawable/my_button"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginBottom="45dp"
            android:textColor="@color/colorWhite"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/imageParkSmartLogin"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:srcCompat="@drawable/parksmartlogo_croped"
            android:contentDescription="@string/parksmartlogo"
            android:layout_above="@+id/layout_linearLayout"
            android:layout_alignParentStart="true" />


        <LinearLayout
            android:id="@+id/layout_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:orientation="vertical"
            android:layout_marginBottom="44dp"
            android:layout_above="@+id/activity_login_signin_button"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:id="@+id/activity_login_email_editText"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:background="@drawable/input_outline"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                android:padding="10dp"
                android:fontFamily="sans-serif"
                android:maxLines="1" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/activity_login_password_editText"
                android:background="@drawable/input_outline"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:padding="10dp"
                android:maxLines="1" />

        </LinearLayout>



    </RelativeLayout>





</android.support.design.widget.CoordinatorLayout>
